--- a/app/src/main/res/layout/row_bioentidad.xml
+++ b/app/src/main/res/layout/row_bioentidad.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="414dp"
-        android:layout_height="146dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,12 +22,15 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/bg3text"
+            android:backgroundTint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@color/bg3text"
             android:orientation="vertical">
 
             <LinearLayout
@@ -44,7 +47,9 @@
                         android:id="@+id/textView10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Nombre Común" />
+                        android:text="Nombre Común"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/txtnombrecomun"
@@ -56,7 +61,9 @@
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Nombre Cientifico" />
+                        android:text="Nombre Cientifico"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/txtnombrecientifico"
@@ -76,7 +83,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Familia" />
+                        android:text="Familia"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/txtfamilia"
@@ -94,6 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="67dp"
                 android:layout_weight="1"
+                android:background="@color/bgtext"
                 android:text="TextView" />
 
         </LinearLayout>
