--- a/app/src/main/res/layout/row_encuentro.xml
+++ b/app/src/main/res/layout/row_encuentro.xml
@@ -9,6 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/bg5"
+        android:fadingEdge="horizontal"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,20 +25,26 @@
             <TextView
                 android:id="@+id/tituloejemplo"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:text="Bioentidad" />
+                android:layout_height="wrap_content"
+                android:background="@color/bg3text"
+                android:text="Bioentidad"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowtxtbioe"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="29dp"
                 android:text="--bioentidad--" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="descripcion" />
+                android:background="@color/bg3text"
+                android:text="descripción"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowtxtdesc"
@@ -55,13 +63,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:text="Compartir" />
+                android:text="Compartir"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fecha" />
+                android:background="@color/bg3text"
+                android:text="Fecha"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/rowtxtfecha"
